# MentorsMind-Contract

./: BENCHMARKS.md  Cargo.toml  PR_BOUNTY_CONTRACT.md  package-lock.json  package.json  update_escrow.py
.github/workflows/: contracts.yml  sdk-generation.yml
contracts/allowance/src/: lib.rs
contracts/anomaly_detector/: Cargo.toml
contracts/anomaly_detector/src/: lib.rs
contracts/bounty/: Cargo.toml
contracts/bounty/src/: lib.rs
contracts/cert_showcase/: Cargo.toml
contracts/cert_showcase/src/: lib.rs
contracts/certificates/: Cargo.toml
contracts/certificates/src/: lib.rs
contracts/collateral_loan/: Cargo.toml
contracts/credit_score/src/: lib.rs
contracts/delegation/: Cargo.toml
contracts/delegation/src/: lib.rs
contracts/dispute_evidence/: Cargo.toml
contracts/dispute_evidence/src/: lib.rs
contracts/endorsements/src/: lib.rs
contracts/escrow/: INVARIANTS.md
contracts/escrow/src/: invariants.rs
contracts/escrow_factory/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/health_dashboard/src/: lib.rs
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs
contracts/interface_registry/src/: lib.rs
contracts/kyc_registry/src/: lib.rs  test.rs
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: lib.rs
contracts/mnt-token/src/: lib.rs
contracts/multisig_admin/: Cargo.toml
contracts/multisig_admin/src/: lib.rs
contracts/oracle/src/: lib.rs
contracts/pause_guardian/: Cargo.toml
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs
contracts/proposal_templates/: Cargo.toml
contracts/rbac/: Cargo.toml
contracts/referral/: Cargo.toml
contracts/referral_leaderboard/: Cargo.toml
contracts/regulatory_reporting/: Cargo.toml
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/reputation/test_snapshots/tests/: test_duplicate_review.1.json  test_invalid_rating.1.json  test_running_average.1.json  test_session_not_released.1.json  test_submit_review_success.1.json
contracts/sanctions/: Cargo.toml
contracts/session_oracle/: Cargo.toml
contracts/session_registry/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/snapshot/: Cargo.toml
contracts/staking/: Cargo.toml
docs/: attack-simulations.md  events.md  formal-verification.md  security-patterns.md  state-machines.md
escrow/fuzz/: Cargo.toml
escrow/fuzz/fuzz_targets/: fuzz_escrow.rs
escrow/src/: lib.rs
escrow/test_snapshots/: test_admin_release.1.json  test_over_release_panics.1.json  test_page_size_cap.1.json  test_query_by_learner_pagination.1.json  test_query_by_mentor_pagination.1.json  test_query_by_status.1.json  test_release_partial.1.json  test_resolve_dispute_to_learner.1.json  test_resolve_dispute_to_mentor.1.json  test_session_id_uniqueness.1.json  test_three_session_package_full_lifecycle.1.json  test_try_auto_release.1.json
escrow/tests/: escrow_test.rs
mentorminds-backend/: package.json  tsconfig.json
mentorminds-backend/src/: index.ts
mentorminds-backend/tests/: escrow-api-atomicity.test.ts  escrow-dispute.service.test.ts  escrow-release.service.test.ts  escrow.model.test.ts  escrow.service.test.ts  escrowCheck.worker.test.ts  sorobanEscrow.service.test.ts  stellarAccount.service.test.ts  verify-analytics.ts
mentorminds-stellar/: .env.example  tsconfig.json
mentorminds-stellar/src/: vite-env.d.ts
scripts/: check-benchmarks.sh  deploy-escrow.sh
tests/: Cargo.toml  benchmarks.rs  check_err.txt  check_output.txt  economic_attacks.rs  integration_test.rs  lib.rs  state_machine_tests.rs  test_err.txt  upgrade_test.rs
tests/interoperability/: escrow_compliance.rs  escrow_token.rs  governance_chain.rs  health_dashboard.rs  lending_credit.rs  mocks.rs  mod.rs  reputation_escrow.rs
tests/test_snapshots/: simulate_flash_loan_governance_attack_blocked_by_snapshot_sc32.1.json  simulate_liquidity_drain_enforces_sc36_fee_floor.1.json  simulate_oracle_manipulation_requires_three_compromised_feeders_sc42.1.json  simulate_sybil_self_review_attempts_blocked_by_session_verification_requirement.1.json  test_auto_release_after_session_end.1.json  test_event_order_full_lifecycle.1.json  test_full_session_lifecycle.1.json  test_gold_tier_fee_300_bps.1.json  test_multiple_sessions_tracked_independently.1.json  test_referral_reward_after_first_session.1.json  test_reputation_reads_escrow_status.1.json  test_rollback_double_release_leaves_state_intact.1.json  test_rollback_when_verification_revoked_before_release.1.json  test_staking_tier_verified_vs_unverified.1.json
tests/test_snapshots/interoperability/escrow_compliance/tests/: test_compliance_success.1.json  test_failure_kyc_not_approved.1.json  test_failure_sanctioned.1.json  test_failure_velocity_limit.1.json
tests/test_snapshots/interoperability/escrow_token/tests/: test_escrow_token_transfer_chain.1.json
tests/test_snapshots/interoperability/governance_chain/tests/: test_governance_timelock_escrow_chain.1.json
tests/test_snapshots/interoperability/health_dashboard/tests/: test_health_dashboard_aggregation.1.json
tests/test_snapshots/interoperability/lending_credit/tests/: test_lending_pool_credit_score_check.1.json
tests/test_snapshots/interoperability/reputation_escrow/tests/: test_reputation_escrow_interaction.1.json
(+129 files in other folders)
