[package]
name = "escrow-fuzz"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
# Intentionally excluded from the workspace members list so it does not
# affect the production build or CI artifact sizes.
#
# Run all property tests (10 000 iterations each) with:
#   cargo test --manifest-path escrow/fuzz/Cargo.toml

[dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }

[[test]]
name = "fuzz_escrow"
path = "fuzz_targets/fuzz_escrow.rs"
